added drop down box

--- a/styles.css
+++ b/styles.css
@@ -421,3 +421,31 @@ p{
 h2{
     margin-top: 70px;
 }
+.custom-select{
+    position: relative;
+}
+.custom-select select{
+    border: none;
+    width: 20px;
+    color: #B0B0B0;
+    /* display: none; */
+}
+
+/* .select-selected {
+    background-color: DodgerBlue;
+  }
+  
+.select-selected:after {
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent; */
+  /* } */
+.select-selected.select-arrow-active:after {
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+  }
